[package]
name = "fontforge-typeconv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontforge-sys = { git = "https://github.com/MFEK/fontforge-sys.rlib" }
glifparser = { git = "https://github.com/MFEK/glifparser.rlib" }
